Changes in @NEW@:
  o Protocol Changes:
    * The addRoleMember() and getRoleMembers() calls are now exposed
      via XMLRPC. (CNY-2862)

Changes in 2.0.17:
  o Build Changes:
    * Recipes loaded based on the autoLoadRecipe configuration directive
      are now ordered based on the loadedTroves list in the packages
      containing those recipes. (CNY-2694)
    * The information provided by the "cvc status" command is now
      available through the checkin.generateStatus API call, and
      it now handles new packages that have not yet been checked
      in. (CNY-2843)
    * The "cvc log" command now has a --newer option that prints
      only log messages that are newer than the current checkout,
      and has been modified to be consumable via a new
      checkin.iterLog API call. (CNY-2840)
    * Building factories which haven't been checked in should work now
      (CNY-2757)
    * Specifying checkDeps and resolveDeps no longer causes an extra
      dependency check when building a group
    * Checking out a source trove without a buildLabel set, but with
      a version specified, no longer gives a confusing warning about
      the buildLabel being unset. (CNY-2783)

  o Bug Fixes:
    * A bug that caused a traceback when rolling back the installation
      of a group containing a post-rollback script has been corrected.
      (CNY-2844)
    * A bug that caused a traceback during metadata lookup when
      installing files to a new component has been corrected.  (CNY-2846)
    * A bug causing magic to identify almost every file as a tarfile
      has been fixed. (CNP-135)
    * When rolling back an update started with Conary version 2.0.15 or
      older, that generated multiple rollback points (generally as a
      result of the presence of critical updates as part of the job),
      the rollback scripts are properly executed. (CNY-2845)
   
  o Server Changes:
    * The deleteUserByName() xmlrpc call now only deletes the role